--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#">Home</a>
         <a href="#contato">Contato</a>
         <a href="#quem-somos">Quem Somos</a>
+        <a href="/planos.html">Planos</a>
       </nav>
     </div>
   </header>
@@ -67,11 +68,11 @@
     <div class="footer-container">
       <div>
         <h4>Contato</h4>
-        <p>(+55) 11 97302-2242<br>contato@lyrapilates.com.br</p>
+        <p>(+55) 11 92122-0509<br>contato@lyrapilates.com.br</p>
       </div>
       <div>
         <h4>Localização</h4>
-        <p>Guarulhos</p>
+        <p>AVENIDA DOUTOR RENATO DE ANDRADE MAIA, 978 (SALA 2), PARQUE RENATO MAIA, GUARULHOS</p>
       </div>
     </div>
   </footer>
