--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="#">Home</a>
         <a href="#contato">Contato</a>
         <a href="#quem-somos">Quem Somos</a>
+        <a href="#agende-sua-aula">Agende sua Aula</a>
         <a href="/planos.html">Planos</a>
       </nav>
     </div>
@@ -54,19 +55,29 @@
     </div>
   </section>
 
-  <section id="formulario" class="sobre">
-    <div class="container">
-      <h2>📅 Agende sua Aula</h2>
-      <form action="https://formsubmit.co/contato@lyrapilates.com.br" method="POST">
-        <input type="text" name="name" placeholder="Seu nome" required style="width:100%; padding:0.5rem; margin-bottom:1rem;">
-        <input type="tel" name="phone" placeholder="Seu telefone" required style="width:100%; padding:0.5rem; margin-bottom:1rem;">
-        <input type="hidden" name="_next" value="https://lyrapilates.com.br/obrigado.html">
-        <input type="hidden" name="_subject" value="Novo agendamento de aula via site">
-        <button type="submit" class="cta-button">Enviar</button>
-      </form>
-      <p style="margin-top:1rem; color:#444;">Após o envio, entraremos em contato com você para confirmar o agendamento.</p>
-    </div>
-  </section>
+  <section id="agende-sua-aula" class="sobre" style="background-color: #f8f8f8; padding: 4rem 0;">
+  <div class="container" style="text-align: center;">
+    <h2 style="font-size: 2rem; margin-bottom: 1rem;">✨ Agende sua Aula Experimental</h2>
+    <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto 2rem;">
+      Viva a experiência do pilates no Studio Lyra! Agende uma aula experimental gratuita, sem custos e sem compromisso. É rápido e fácil — basta clicar no botão abaixo. 💜
+    </p>
+    <a href="https://agendamento.nextfit.com.br/78975e16-2dcc-408e-85de-51962bc7d718" target="_blank" style="background-color: #a046a4; color: white; padding: 0.8rem 2rem; border-radius: 8px; text-decoration: none; font-weight: bold;">
+      Agendar Agora
+    </a>
+  </div>
+</section>
+
+ <section id="contato" class="sobre">
+  <div class="container">
+    <h2>📞 Entre em Contato</h2>
+    <p>Ficou com alguma dúvida ou quer falar com a gente?</p>
+    <ul>
+      <li><strong>WhatsApp:</strong> <a href="https://wa.me/5511973022242" target="_blank">(11) 97302‑2242</a></li>
+      <li><strong>Email:</strong> <a href="mailto:contato@lyrapilates.com.br">contato@lyrapilates.com.br</a></li>
+      <li><strong>Endereço:</strong> Av. Renato Maia, 978 - Guarulhos/SP</li>
+    </ul>
+  </div>
+</section>
 
   <footer id="contato">
     <div class="footer-container">
