--- a/index.html
+++ b/index.html
@@ -78,17 +78,13 @@
   </div>
 </section>
 
-  <footer id="contato">
-    <div class="footer-container">
-      <div>
-        <h4>Contato</h4>
-        <p>(+55) 11 92122-0509<br>contato@lyrapilates.com.br</p>
-      </div>
-      <div>
-        <h4>Localização</h4>
-        <p>AVENIDA DOUTOR RENATO DE ANDRADE MAIA, 978 (SALA 2), PARQUE RENATO MAIA, GUARULHOS</p>
-      </div>
-    </div>
-  </footer>
+  <footer style="background-color: #f0eef7; padding: 2rem 0;">
+  <div class="footer-container" style="text-align: center;">
+    <img src="assets/img/logo.png" alt="Logo Lyra Pilates" style="height: 60px; margin-bottom: 1rem;" />
+    <p style="margin: 0.5rem 0;">Studio de Pilates Lyra – Guarulhos - Pq. Renato Maia</p>
+    <p style="margin: 0.5rem 0;">Av. Renato Maia, 978 – Sala 2</p>
+    <p style="margin: 0.5rem 0;">contato@lyrapilates.com.br</p>
+  </div>
+</footer>
 </body>
 </html>
