--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@
   </div>
 </section>
 
-  <footer style="background-color: #f0eef7; padding: 2rem 0;">
-  <div class="footer-container" style="text-align: center;">
-    <img src="assets/img/logo.png" alt="Logo Lyra Pilates" style="height: 60px; margin-bottom: 1rem;" />
-    <p style="margin: 0.5rem 0;">Studio de Pilates Lyra – Guarulhos - Pq. Renato Maia</p>
-    <p style="margin: 0.5rem 0;">Av. Renato Maia, 978 – Sala 2</p>
-    <p style="margin: 0.5rem 0;">contato@lyrapilates.com.br</p>
-  </div>
+<footer id="contato" style="text-align: center; padding: 1.5rem 1rem; background-color: #f0eef7;">
+  <img src="assets/img/logo-transparente.png" alt="Logo Lyra" style="height: 64px; margin-bottom: 0.8rem;" />
+  
+  <p style="margin: 0.2rem 0;"><strong>Studio de Pilates Lyra</strong> – Guarulhos – Pq. Renato Maia</p>
+  <p style="margin: 0.2rem 0;">Av. Renato Maia, 978 – Sala 2</p>
+  <p style="margin: 0.2rem 0;"><a href="mailto:contato@lyrapilates.com.br">contato@lyrapilates.com.br</a></p>
 </footer>
 </body>
 </html>
