--- a/index.html
+++ b/index.html
@@ -69,11 +69,19 @@
  <section id="contato" class="sobre">
   <div class="container">
     <h2>📞 Entre em Contato</h2>
-    <p>Ficou com alguma dúvida ou quer falar com a gente?</p>
+    <p>Estamos à disposição para tirar dúvidas e te ajudar no que for preciso!</p>
     <ul>
-      <li><strong>WhatsApp:</strong> <a href="https://wa.me/5511921220509" target="_blank">(11) 92122‑0509</a></li>
+      <li><strong>WhatsApp:</strong> <a href="https://wa.me/5511921220509" target="_blank">(11) 92122-0509</a></li>
       <li><strong>Email:</strong> <a href="mailto:contato@lyrapilates.com.br">contato@lyrapilates.com.br</a></li>
-      <li><strong>Endereço:</strong> Av. Renato Maia, 978 - Guarulhos/SP</li>
+      <li>
+        <strong>Redes Sociais:</strong>
+        <a href="https://www.instagram.com/studiopilateslyra?igsh=cTdhNjNwYXFhZm5k&utm_source=qr" target="_blank">
+          <img src="assets/img/instagram-brands-solid-full.svg" alt="Instagram" width="24" height="24">
+        </a>
+        <a href="https://www.facebook.com/share/1CTxZe1MTQ/?mibextid=wwXIfr" target="_blank">
+          <img src="assets/img/facebook-brands-solid-full.svg" alt="Facebook" width="24" height="24">
+        </a>
+      </li>
     </ul>
   </div>
 </section>
