--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="canonical" href="https://lyrapilates.com.br/" />
   <title>Lyra Studio de Pilates</title>
   
   <!-- FAVICON -->
