--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <p>Conheça o ambiente acolhedor e equipado do Studio Lyra.</p>
 
     <div class="carousel">
-      <button class="carousel-btn prev" onclick="moverSlide(-1)">&#10094;</button>
+      <button class="carousel-button prev" onclick="moverSlide(-1)">&#10094;</button>
       <div class="carousel-track">
         <img src="assets/img/foto1.jpeg" alt="Espaço 1">
         <img src="assets/img/foto2.jpeg" alt="Espaço 2">
         <img src="assets/img/foto3.jpeg" alt="Espaço 3">
       </div>
-      <button class="carousel-btn next" onclick="moverSlide(1)">&#10095;</button>
+      <button class="carousel-button next" onclick="moverSlide(1)">&#10095;</button>
     </div>
   </div>
 </section>
