--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </div>
   </section>
 
-  <section id="agende-sua-aula" class="sobre" style="background-color: #f8f8f8; padding: 4rem 0;">
-  <div class="container" style="text-align: center;">
+  <section id="agende-sua-aula" class="sobre">
+  <div class="container">
     <h2 style="font-size: 2rem; margin-bottom: 1rem;">✨ Agende sua Aula Experimental</h2>
     <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto 2rem;">
       Viva a experiência do pilates no Studio Lyra! Agende uma aula experimental gratuita, sem custos e sem compromisso. É rápido e fácil — basta clicar no botão abaixo. 💜
