--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#contato">Contato</a>
         <a href="#quem-somos">Quem Somos</a>
         <a href="#agende-sua-aula">Agende sua Aula</a>
+        <a href="#espaco">Nosso Espaço</a>
         <a href="/planos.html">Planos</a>
       </nav>
     </div>
@@ -58,7 +59,7 @@
 
   <section id="agende-sua-aula" class="sobre">
   <div class="container">
-    <h2 style="font-size: 2rem; margin-bottom: 1rem;">✨ Agende sua Aula Experimental</h2>
+    <h2 style="font-size: 2rem; margin-bottom: 1rem;">✨ Agende sua Aula Experimental ✨</h2>
     <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto 2rem;">
       Viva a experiência do pilates no Studio Lyra! Agende uma aula experimental gratuita, sem custos e sem compromisso. É rápido e fácil — basta clicar no botão abaixo. 💜
     </p>
